force-app/main/default/objects/ShopProductInCart__c/ShopProductInCart__c.object-meta.xml
<CustomObject>
    <label>ShopProductInCart</label>
    <nameField>
        <displayFormat>PRC-{0000}</displayFormat>
        <label>ShopProductInCartID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ShopProductsInCart</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>