force-app/main/default/objects/ShopProductInCart__c/fields/CartProdAmount__c.field-meta.xml
<CustomField>
    <fullName>CartProdAmount__c</fullName>
    <label>Amount</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>