force-app/main/default/objects/ShopProductInCart__c/fields/Shop_Account__c.field-meta.xml
<CustomField>
    <fullName>Shop_Account__c</fullName>
    <label>Shop Account</label>
    <referenceTo>ShopAccount__c</referenceTo>
    <relationshipLabel>ShopProductsInCart</relationshipLabel>
    <relationshipName>ShopCart</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>