force-app/main/default/objects/ShopProductInCart__c/fields/ShopProduct__c.field-meta.xml
<CustomField>
    <fullName>ShopProduct__c</fullName>
    <label>ShopProduct</label>
    <referenceTo>ShopProduct__c</referenceTo>
    <relationshipLabel>ShopProductsInCart</relationshipLabel>
    <relationshipName>ShopProductsInCart</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>